# alignmentattributes

./: .gitignore  README.org  alignmentattributes.cabal  cabal.project  sodiumalignment.c  sodiumalignment.h  test.chs
